apps/base/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pgadmin
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/name: pgadmin
  name: pgadmin
  namespace: postgresql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
        app.kubernetes.io/name: pgadmin
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - image: dpage/pgadmin4
          name: pgadmin
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin
      volumes:
        - name: pgadmin
          persistentVolumeClaim:
            claimName: pgadmin
