apps/base/pgadmin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: postgresql
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.f9.casa`)
      kind: Rule
      services:
        - name: pgadmin
          port: 80
      # middlewares:
      #   - name: authentik
      #     namespace: authentik
